# weather-proov

./: .gitignore  README.md  pyproject.toml
migrations/: 0001_phase0_schema.sql
ops/: RUNBOOK.md  backup.sh  run-local.sh
py/wxm/: archive.py  bridge.py  cli.py  db.py  healthz.py  spec.py  units.py
py/wxm/calibrate/: buckets.py  eligibility.py  pipeline.py
py/wxm/execute/: paper.py
py/wxm/ingest/: book_recorder.py  ensembles.py  market_discovery.py  station_truth.py
py/wxm/report/: daily.py
py/wxm/settle/: pnl.py  settlement.py
spec/: resolution.yaml  trading.yaml
tests/: test_book_recorder.py  test_buckets.py  test_db_migrates.py  test_ensembles.py  test_healthz.py  test_market_discovery.py  test_paper_executor.py  test_pipeline_and_bridge.py  test_settlement_and_report.py  test_spec_loads.py  test_station_truth.py  test_units_literal_grep.py  test_units_roundtrip.py
tests/fixtures/gamma/: event_nyc_sample.json
tests/fixtures/open_meteo/: nyc_ecmwf_sample.json
tests/fixtures/truth/: hko_2026_06.xml  nws_cli_knyc_2026_06_15.txt  open_meteo_archive_eglc_2026_06_15.json  wu_knyc_2026_06_15.json
