[project]
name = "wxm"
version = "0.1.0"
description = "Weather Markets — Polymarket daily-high temperature trader"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "pydantic>=2.5",
    "pyyaml>=6.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
wxm = "wxm.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["py/wxm"]

[tool.pytest.ini_options]
pythonpath = ["py"]
testpaths = ["tests"]
